--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,3 @@
-greeting=Bonjour! Bienvenue sur notre site!
+greeting=default
+switch_to_en=Switch to English Language
+switch_to_ru=Switch to Russian Language
