--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,5 @@
 greeting=default
 switch_to_en=Switch to English Language
 switch_to_ru=Switch to Russian Language
+errors.incorrect.password=Incorrect password
+INSUFFICIENT_UPPERCASE=Password missing at least 1 uppercase characters.
