--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -1,3 +1,5 @@
 greeting=Здравствуйте!
 switch_to_en=Английская версия
 switch_to_ru=Русская версия
+errors.incorrect.password=Неверный пароль
+INSUFFICIENT_UPPERCASE=В пароле отсутствует как минимум 1 символ верхнего регистра.
