--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,3 +1,5 @@
 greeting=Hello!
 switch_to_en=English Version
 switch_to_ru=Russian Version
+errors.incorrect.password=Incorrect password
+INSUFFICIENT_UPPERCASE=Password missing at least 1 uppercase characters.
