--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -2,4 +2,4 @@ greeting=Здравствуйте!
 switch_to_en=Английская версия
 switch_to_ru=Русская версия
 errors.incorrect.password=Неверный пароль
-INSUFFICIENT_UPPERCASE=В пароле отсутствует как минимум 1 символ верхнего регистра.
+INSUFFICIENT_UPPERCASE=\u0412\u0020\u043f\u0430\u0440\u043e\u043b\u0435\u0020\u043e\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0443\u0435\u0442\u0020\u043a\u0430\u043a\u0020\u043c\u0438\u043d\u0438\u043c\u0443\u043c\u0020\u0031\u0020\u0441\u0438\u043c\u0432\u043e\u043b\u0020\u0432\u0435\u0440\u0445\u043d\u0435\u0433\u043e\u0020\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u002e
