--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -3,3 +3,12 @@ switch_to_en=Английская версия
 switch_to_ru=Русская версия
 errors.incorrect.password=Неверный пароль
 INSUFFICIENT_UPPERCASE=\u0412\u0020\u043f\u0430\u0440\u043e\u043b\u0435\u0020\u043e\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0443\u0435\u0442\u0020\u043a\u0430\u043a\u0020\u043c\u0438\u043d\u0438\u043c\u0443\u043c\u0020\u0031\u0020\u0441\u0438\u043c\u0432\u043e\u043b\u0020\u0432\u0435\u0440\u0445\u043d\u0435\u0433\u043e\u0020\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u002e
+ILLEGAL_WHITESPACE=\u0412 \u043f\u0430\u0440\u043e\u043b\u0435 \u0435\u0441\u0442\u044c \u043f\u0440\u043e\u0431\u0435\u043b.
+ILLEGAL_NUMBER_RANGE=Пароль содержит недопустимое число.
+INSUFFICIENT_LOWERCASE=Пароль должен содержать один или несколько символов нижнего регистра.
+INSUFFICIENT_ALPHABETICAL=Password must contain one or more alphabetical characters.
+INSUFFICIENT_DIGIT=Password must contain one or more digit characters.
+INSUFFICIENT_SPECIAL=Password must contain one or more special characters.
+INSUFFICIENT_COMPLEXITY_RULES=No rules have been configured for a password of length %1$s.
+TOO_LONG=Password must be no more than 60 characters in length.
+TOO_SHORT=Password must be 8 or more characters in length.
