--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -4,11 +4,12 @@ switch_to_ru=Русская версия
 errors.incorrect.password=Неверный пароль
 INSUFFICIENT_UPPERCASE=\u0412\u0020\u043f\u0430\u0440\u043e\u043b\u0435\u0020\u043e\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0443\u0435\u0442\u0020\u043a\u0430\u043a\u0020\u043c\u0438\u043d\u0438\u043c\u0443\u043c\u0020\u0031\u0020\u0441\u0438\u043c\u0432\u043e\u043b\u0020\u0432\u0435\u0440\u0445\u043d\u0435\u0433\u043e\u0020\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u002e
 ILLEGAL_WHITESPACE=\u0412 \u043f\u0430\u0440\u043e\u043b\u0435 \u0435\u0441\u0442\u044c \u043f\u0440\u043e\u0431\u0435\u043b.
-ILLEGAL_NUMBER_RANGE=Пароль содержит недопустимое число.
-INSUFFICIENT_LOWERCASE=Пароль должен содержать один или несколько символов нижнего регистра.
-INSUFFICIENT_ALPHABETICAL=Password must contain one or more alphabetical characters.
-INSUFFICIENT_DIGIT=Password must contain one or more digit characters.
-INSUFFICIENT_SPECIAL=Password must contain one or more special characters.
-INSUFFICIENT_COMPLEXITY_RULES=No rules have been configured for a password of length %1$s.
-TOO_LONG=Password must be no more than 60 characters in length.
-TOO_SHORT=Password must be 8 or more characters in length.
+ILLEGAL_NUMBER_RANGE=\u041f\u0430\u0440\u043e\u043b\u044c\u0020\u0441\u043e\u0434\u0435\u0440\u0436\u0438\u0442\u0020\u043d\u0435\u0434\u043e\u043f\u0443\u0441\u0442\u0438\u043c\u043e\u0435\u0020\u0447\u0438\u0441\u043b\u043e\u002e
+INSUFFICIENT_LOWERCASE=\u041f\u0430\u0440\u043e\u043b\u044c\u0020\u0434\u043e\u043b\u0436\u0435\u043d\u0020\u0441\u043e\u0434\u0435\u0440\u0436\u0430\u0442\u044c\u0020\u043e\u0434\u0438\u043d\u0020\u0438\u043b\u0438\u0020\u043d\u0435\u0441\u043a\u043e\u043b\u044c\u043a\u043e\u0020\u0441\u0438\u043c\u0432\u043e\u043b\u043e\u0432\u0020\u043d\u0438\u0436\u043d\u0435\u0433\u043e\u0020\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u002e
+INSUFFICIENT_ALPHABETICAL=\u041f\u0430\u0440\u043e\u043b\u044c\u0020\u0434\u043e\u043b\u0436\u0435\u043d\u0020\u0441\u043e\u0434\u0435\u0440\u0436\u0430\u0442\u044c\u0020\u043e\u0434\u0438\u043d\u0020\u0438\u043b\u0438\u0020\u043d\u0435\u0441\u043a\u043e\u043b\u044c\u043a\u043e\u0020\u0431\u0443\u043a\u0432\u0020\u0430\u043b\u0444\u0430\u0432\u0438\u0442\u0430\u002e
+INSUFFICIENT_DIGIT=\u041f\u0430\u0440\u043e\u043b\u044c\u0020\u0434\u043e\u043b\u0436\u0435\u043d\u0020\u0441\u043e\u0434\u0435\u0440\u0436\u0430\u0442\u044c\u0020\u043e\u0434\u043d\u0443\u0020\u0438\u043b\u0438\u0020\u043d\u0435\u0441\u043a\u043e\u043b\u044c\u043a\u043e\u0020\u0446\u0438\u0444\u0440\u002e
+INSUFFICIENT_SPECIAL=\u041f\u0430\u0440\u043e\u043b\u044c\u0020\u0434\u043e\u043b\u0436\u0435\u043d\u0020\u0441\u043e\u0434\u0435\u0440\u0436\u0430\u0442\u044c\u0020\u043e\u0434\u0438\u043d\u0020\u0438\u043b\u0438\u0020\u043d\u0435\u0441\u043a\u043e\u043b\u044c\u043a\u043e\u0020\u0441\u043f\u0435\u0446\u0438\u0430\u043b\u044c\u043d\u044b\u0445\u0020\u0441\u0438\u043c\u0432\u043e\u043b\u043e\u0432\u002e
+TOO_LONG=\u0414\u043b\u0438\u043d\u0430\u0020\u043f\u0430\u0440\u043e\u043b\u044f\u0020\u043d\u0435\u0020\u0434\u043e\u043b\u0436\u043d\u0430\u0020\u043f\u0440\u0435\u0432\u044b\u0448\u0430\u0442\u044c\u0020\u0036\u0030\u0020\u0441\u0438\u043c\u0432\u043e\u043b\u043e\u0432\u002e
+TOO_SHORT=\u041f\u0430\u0440\u043e\u043b\u044c\u0020\u0434\u043e\u043b\u0436\u0435\u043d\u0020\u0441\u043e\u0441\u0442\u043e\u044f\u0442\u044c\u0020\u0438\u0437\u0020\u0038\u0020\u0438\u043b\u0438\u0020\u0431\u043e\u043b\u0435\u0435\u0020\u0441\u0438\u043c\u0432\u043e\u043b\u043e\u0432\u002e
+placeholder.username=Hi!
+placeholder.password=Hi!
