--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -31,5 +31,11 @@ SOURCE_VIOLATION=Password cannot be the same as your %1$s password.
 TOO_LONG=Password must be no more than %2$s characters in length.
 TOO_SHORT=Password must be %1$s or more characters in length.
 TOO_MANY_OCCURRENCES=Password contains %2$s occurrences of the character '%1$s', but at most %3$s are allowed.
-placeholder.username=Hi!
-placeholder.password=Hi!
+placeholder.username=username
+placeholder.password=password
+sign_in=Sign in
+sign_up=Sign up
+login=login
+not_registered=Not registered?
+create_an_account=Create an account
+invalid_phone_number=Invalid Phone Number
