--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -31,5 +31,19 @@ SOURCE_VIOLATION=Password cannot be the same as your %1$s password.
 TOO_LONG=Password must be no more than %2$s characters in length.
 TOO_SHORT=Password must be %1$s or more characters in length.
 TOO_MANY_OCCURRENCES=Password contains %2$s occurrences of the character '%1$s', but at most %3$s are allowed.
-placeholder.username=Hi!
-placeholder.password=Hi!
+placeholder.username=username
+placeholder.password=password
+sign_in=Sign in
+sign_up=Sign up
+login=login
+not_registered=Not registered?
+create_an_account=Create an account
+create=Create
+already_registered=Already registered?
+invalid_phone_number=Invalid Phone Number
+sign_up.name=enter your name
+sign_up.last=enter your last name
+sign_up.phone=enter your phone number
+sign_up.email=enter your email address
+sign_up.password=enter your password
+sign_up.confirm=confirm password
