--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -11,5 +11,19 @@ INSUFFICIENT_DIGIT=\u041f\u0430\u0440\u043e\u043b\u044c\u0020\u0434\u043e\u043b\
 INSUFFICIENT_SPECIAL=\u041f\u0430\u0440\u043e\u043b\u044c\u0020\u0434\u043e\u043b\u0436\u0435\u043d\u0020\u0441\u043e\u0434\u0435\u0440\u0436\u0430\u0442\u044c\u0020\u043e\u0434\u0438\u043d\u0020\u0438\u043b\u0438\u0020\u043d\u0435\u0441\u043a\u043e\u043b\u044c\u043a\u043e\u0020\u0441\u043f\u0435\u0446\u0438\u0430\u043b\u044c\u043d\u044b\u0445\u0020\u0441\u0438\u043c\u0432\u043e\u043b\u043e\u0432\u002e
 TOO_LONG=\u0414\u043b\u0438\u043d\u0430\u0020\u043f\u0430\u0440\u043e\u043b\u044f\u0020\u043d\u0435\u0020\u0434\u043e\u043b\u0436\u043d\u0430\u0020\u043f\u0440\u0435\u0432\u044b\u0448\u0430\u0442\u044c\u0020\u0036\u0030\u0020\u0441\u0438\u043c\u0432\u043e\u043b\u043e\u0432\u002e
 TOO_SHORT=\u041f\u0430\u0440\u043e\u043b\u044c\u0020\u0434\u043e\u043b\u0436\u0435\u043d\u0020\u0441\u043e\u0441\u0442\u043e\u044f\u0442\u044c\u0020\u0438\u0437\u0020\u0038\u0020\u0438\u043b\u0438\u0020\u0431\u043e\u043b\u0435\u0435\u0020\u0441\u0438\u043c\u0432\u043e\u043b\u043e\u0432\u002e
-placeholder.username=Hi!
-placeholder.password=Hi!
+sign_in=Войти в систему
+sign_up=Зарегистрироваться
+login=авторизоваться
+not_registered=Не зарегистрирован?
+create_an_account=Создать учетную запись
+create=Создать
+already_registered=Уже зарегистрирован?
+invalid_phone_number=Неправильный формат номера телефона
+placeholder.username=имя пользователя
+placeholder.password=пароль
+sign_up.name=Введите ваше имя
+sign_up.last=Введите вашу фамилию
+sign_up.phone=Введите свой номер телефона
+sign_up.email=Введите адрес электронной почты
+sign_up.password=Введите свой пароль
+sign_up.confirm=Подтвердите пароль
