--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -38,4 +38,12 @@ sign_up=Sign up
 login=login
 not_registered=Not registered?
 create_an_account=Create an account
+create=Create
+already_registered=Already registered?
 invalid_phone_number=Invalid Phone Number
+sign_up.name=enter your name
+sign_up.last=enter your last name
+sign_up.phone=enter your phone number
+sign_up.email=enter your email address
+sign_up.password=enter your password
+sign_up.confirm=confirm password
