--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -47,3 +47,17 @@ sign_up.phone=enter your phone number
 sign_up.email=enter your email address
 sign_up.password=enter your password
 sign_up.confirm=confirm password
+admin_panel.add_film=Add films
+admin_panel.add_halls=Add halls
+admin_panel.add_sessions=Add sessions
+admin_panel.find_sessions=Find Sessions
+admin_panel.header=Cinema admin panel
+sessions_search.title=Sessions search
+sessions_search.username=Username
+sessions_search.search=Search
+sessions_search.id=id
+sessions_search.time=time
+sessions_search.cost=cost
+sessions_search.film=film
+sessions_search.hall=hall
+sessions_search.chat=chat
