--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -27,3 +27,17 @@ sign_up.phone=Введите свой номер телефона
 sign_up.email=Введите адрес электронной почты
 sign_up.password=Введите свой пароль
 sign_up.confirm=Подтвердите пароль
+admin_panel.add_film=Добавить фильмы
+admin_panel.add_halls=Добавить залы
+admin_panel.add_sessions=Добавить сеансы
+admin_panel.find_sessions=Найти сеансы
+admin_panel.header=Панель администратора кинотеатра
+sessions_search.title=Поиск сессий
+sessions_search.username=Имя пользователя
+sessions_search.search=Поиск
+sessions_search.id=ID
+sessions_search.time=время
+sessions_search.cost=стоимость
+sessions_search.film=фильм
+sessions_search.hall=зал
+sessions_search.chat=чат
