--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,8 @@
-greeting=default
-switch_to_en=Switch to English Language
-switch_to_ru=Switch to Russian Language
+greeting=Hello!
+switch_to_en=English Version
+switch_to_ru=Russian Version
 errors.incorrect.password=Incorrect password
+errors.incorrect.phone=Incorrect phone number
 HISTORY_VIOLATION=Password matches one of %1$s previous passwords.
 ILLEGAL_WORD=Password contains the dictionary word '%1$s'.
 ILLEGAL_WORD_REVERSED=Password contains the reversed dictionary word '%1$s'.
@@ -40,10 +41,24 @@ not_registered=Not registered?
 create_an_account=Create an account
 create=Create
 already_registered=Already registered?
-invalid_phone_number=Invalid Phone Number
 sign_up.name=enter your name
 sign_up.last=enter your last name
 sign_up.phone=enter your phone number
 sign_up.email=enter your email address
 sign_up.password=enter your password
 sign_up.confirm=confirm password
+admin_panel.add_film=Add films
+admin_panel.add_halls=Add halls
+admin_panel.add_sessions=Add sessions
+admin_panel.find_sessions=Find Sessions
+admin_panel.header=Cinema admin panel
+sessions_search.title=Sessions search
+sessions_search.username=Username
+sessions_search.search=Search
+sessions_search.id=id
+sessions_search.time=time
+sessions_search.cost=cost
+sessions_search.film=film
+sessions_search.hall=hall
+sessions_search.chat=chat
+
