--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -2,6 +2,7 @@ greeting=Hello!
 switch_to_en=English Version
 switch_to_ru=Russian Version
 errors.incorrect.password=Incorrect password
+errors.incorrect.phone=Incorrect phone number
 HISTORY_VIOLATION=Password matches one of %1$s previous passwords.
 ILLEGAL_WORD=Password contains the dictionary word '%1$s'.
 ILLEGAL_WORD_REVERSED=Password contains the reversed dictionary word '%1$s'.
@@ -40,7 +41,6 @@ not_registered=Not registered?
 create_an_account=Create an account
 create=Create
 already_registered=Already registered?
-invalid_phone_number=Invalid Phone Number
 sign_up.name=enter your name
 sign_up.last=enter your last name
 sign_up.phone=enter your phone number
@@ -61,3 +61,4 @@ sessions_search.cost=cost
 sessions_search.film=film
 sessions_search.hall=hall
 sessions_search.chat=chat
+
