--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -2,6 +2,7 @@ greeting=Здравствуйте!
 switch_to_en=Английская версия
 switch_to_ru=Русская версия
 errors.incorrect.password=Неверный пароль
+errors.incorrect.phone=Неправильный формат номера телефона
 INSUFFICIENT_UPPERCASE=\u0412\u0020\u043f\u0430\u0440\u043e\u043b\u0435\u0020\u043e\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0443\u0435\u0442\u0020\u043a\u0430\u043a\u0020\u043c\u0438\u043d\u0438\u043c\u0443\u043c\u0020\u0031\u0020\u0441\u0438\u043c\u0432\u043e\u043b\u0020\u0432\u0435\u0440\u0445\u043d\u0435\u0433\u043e\u0020\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u002e
 ILLEGAL_WHITESPACE=\u0412 \u043f\u0430\u0440\u043e\u043b\u0435 \u0435\u0441\u0442\u044c \u043f\u0440\u043e\u0431\u0435\u043b.
 ILLEGAL_NUMBER_RANGE=\u041f\u0430\u0440\u043e\u043b\u044c\u0020\u0441\u043e\u0434\u0435\u0440\u0436\u0438\u0442\u0020\u043d\u0435\u0434\u043e\u043f\u0443\u0441\u0442\u0438\u043c\u043e\u0435\u0020\u0447\u0438\u0441\u043b\u043e\u002e
@@ -18,7 +19,6 @@ not_registered=Не зарегистрирован?
 create_an_account=Создать учетную запись
 create=Создать
 already_registered=Уже зарегистрирован?
-invalid_phone_number=Неправильный формат номера телефона
 placeholder.username=имя пользователя
 placeholder.password=пароль
 sign_up.name=Введите ваше имя
