--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -53,7 +53,7 @@ admin_panel.add_sessions=Add sessions
 admin_panel.find_sessions=Find Sessions
 admin_panel.header=Cinema admin panel
 sessions_search.title=Sessions search
-sessions_search.username=Username
+sessions_search.find=Enter a request
 sessions_search.search=Search
 sessions_search.id=id
 sessions_search.time=time
@@ -61,4 +61,5 @@ sessions_search.cost=cost
 sessions_search.film=film
 sessions_search.hall=hall
 sessions_search.chat=chat
-
+confirm.go_to_sign_in=To authorization
+logout=logout
