--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -33,7 +33,7 @@ admin_panel.add_sessions=Добавить сеансы
 admin_panel.find_sessions=Найти сеансы
 admin_panel.header=Панель администратора кинотеатра
 sessions_search.title=Поиск сессий
-sessions_search.username=Имя пользователя
+sessions_search.find=Введите запрос
 sessions_search.search=Поиск
 sessions_search.id=ID
 sessions_search.time=время
@@ -41,3 +41,5 @@ sessions_search.cost=стоимость
 sessions_search.film=фильм
 sessions_search.hall=зал
 sessions_search.chat=чат
+confirm.go_to_sign_in=К авторизвции!
+logout=Выйти
