--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -63,3 +63,5 @@ sessions_search.hall=hall
 sessions_search.chat=chat
 confirm.go_to_sign_in=To authorization
 logout=logout
+errors.password.mismatch=Password mismatch
+errors.username.exists=This username already exists
