--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -41,5 +41,7 @@ sessions_search.cost=стоимость
 sessions_search.film=фильм
 sessions_search.hall=зал
 sessions_search.chat=чат
-confirm.go_to_sign_in=К авторизвции!
+confirm.go_to_sign_in=Перейти к авторизации!
 logout=Выйти
+errors.password.mismatch=Пароли не совпадают
+errors.username.exists=Такое имя пользователя уже существует
